# bucket

./: README.md
ar/docker-images/: LICENSE  example.env
ar/docker-images/go/: Dockerfile
ar/docker-images/node/: Dockerfile
ar/docker-images/protobuf/: Dockerfile  Makefile
ar/docker-images/python/: Dockerfile
ar/docker-recipes/: .gitignore  README.md
ar/docker-recipes/etcd/: docker-compose.yml
ar/docker-recipes/mariadb/: docker-compose.yml  example.env
ar/docker-recipes/mongodb/: example.env
ar/docker-recipes/redis/: docker-compose.yml  example.env
ar/frankd/: .dockerignore  Dockerfile  README.md  docker-entrypoint.sh  example.env
ar/frankd/frank/: .gitconfig  .zlogin  .zshrc
ar/frankd/frank/.source/: Makefile
ar/go_grpc-template/: .gitignore  Dockerfile  docker-entrypoint.sh  example.env  go.sum
ar/go_grpc-template/.kreya/: Go GRPC Template.krproj  localhost.krenv
ar/go_grpc-template/cmd/: main.go
ar/go_grpc-template/cmd/gateway/: gateway.go
ar/go_grpc-template/cmd/grpc/: grpc.go
ar/py-sinthius-backend/: Dockerfile
ar/py-sinthius-backend/sinthius_octopus/: run.py
ar/py_grpc-template/: .gitignore  README.md
ar/py_grpc-template/src/: .bashrc  fix.py  server.py
ar/py_microservice-template/: Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  setup.cfg  setup.py
ar/py_microservice-template/src/service/: __main__.py
ar/py_microservice-template/src/service/api/: lowlevel.py
ar/py_microservice-template/src/service/api/health/: handlers.py
ar/py_microservice-template/src/service/cmd/: base.py
ar/python-core-framework/: .gitignore  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  setup.cfg
ar/python-core-framework/src/core/: __main__.py  __version__.py  api.py  cli.py  clients.py  command.py  constants.py  counters.py  datetimex.py  encoding.py  filex.py  patterns.py  schemas.py  secretsx.py  tools.py
ar/python-core-framework/src/core/ar/: cbu.py
ar/python-core-framework/src/core/dotted/: utils.py
ar/python-core-framework/src/core/services/: jobs.py  mongodb.py  redis.py
mx/as3-simon-avatar/assets/: Application.fla  ApplicationAssets.fla  ApplicationContent.fla  Untitled-1.fla  Untitled-1.swf
mx/as3-simon-avatar/src/: GoogleAnalytics.as  KCFacebook.as
mx/as3-simon-path/assets/: Application.fla  ApplicationAssets.fla  ApplicationAssets_cs4.fla
mx/as3-simon-path/src/: ApplicationMenu.as  ApplicationPreloader.as  Helpers.as
mx/as3-simon-shooter/assets/: game.fla  game_content.fla  game_content_cs4.fla
mx/as3-simon-shooter/src/: Test.as
mx/as3-snax-pcq-gadget/deploy/: build.properties
mx/as3-snax-pcq-gadget/src/: ApplicationPreloader.as
mx/as3-snax-pcq/src/: Application.as  ApplicationPreloader.as
mx/java-cms/: pom.xml
mx/java-cms/cms-core/: pom.xml
mx/java-cms/cms-webservices/: pom.xml
mx/java-cms/cms-website/: pom.xml
mx/java-cms/docs/: AXO_DB_Script.sql  axoweb-ds.xml
mx/py-feedback-prototipo/: fabfile.py
mx/py-loyalty-plan-migration-tool/: requirements.txt
mx/py-loyalty-plan-migration-tool/assets/: data.sql  schema.sql
mx/py-loyalty-plan-verify-system/assets/: installer-application.sh
mx/py-slot-machine-backend-prototipo/tests/: README.md  _test_spins.py  spin_multitable.py  test_machine.py  test_mdb.py  test_notifications.py  test_session_active.py  test_session_create.py  test_session_facebook.py  test_sessions.py  test_social_api.py  test_sync_devices.py
mx/py-veracruz-orgullo/: bash_profile  build.xml  supervisord
mx/py-veracruz-orgullo/public/: contacto.html  eventos.html  index.html  mapa.html  metadata.html  politicas.html  sitemap.xml
mx/py-veracruz-orgullo/src/: main.py
projects/ar/docker-images/: Makefile  example.env
projects/ar/frankd/: .gitignore  Makefile  README.md
projects/ar/go_grpc-template/: .dockerignore  Makefile  README.md  docker-compose.yml  go.mod
projects/ar/py-sinthius-backend/: run_master.sh
projects/ar/py_bind-cvu/: core
projects/ar/py_grpc-template/: Dockerfile  Makefile  docker-compose.yml  docker-entrypoint.sh  example.env  pyproject.toml
projects/ar/py_grpc-template/scripts/: certs.sh
projects/ar/py_microservice-template/: .dockerignore  .gitignore  MANIFEST.in  Makefile  example.env  pyproject.toml  ssl.cnf
projects/ar/py_microservice-template/src/: core
projects/ar/py_microservice-template/src/service/: __project__.py  __version__.py  cli.py  config.py
projects/ar/py_microservice-template/src/service/api/: __init__.py  base.py
projects/ar/py_microservice-template/src/service/api/health/: __init__.py  lowlevel.py
projects/ar/py_microservice-template/src/service/cmd/: __init__.py  health.py
projects/ar/py_microservice-template/src/service/models/: cache.py
projects/ar/python-core-framework/: Makefile  requirements.txt  setup.py
projects/mx/as3-kirika-ant-project/: build.xml
projects/mx/py-feedback-prototipo/: README.md
projects/mx/py-veracruz-orgullo/: build.properties  server_config
projects/mx/sh-kirika-server-scripts/: build.xml
(+1080 files in other folders)
