[tool.poetry]
name = "service"
version = "1.0.0"
description = "Project description here..."
authors = ["Full NAME <full.name@mail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
msgpack = "^1.0.3"
uvloop = "^0.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
