[metadata]
name = service
version = attr: service.__version__
url = https://github.com/alejandrobernardis/bucket/ar/py_microservice-template/
project_urls =
    Source Code = https://github.com/alejandrobernardis/bucket/ar/py_microservice-template/
    Issue Tracker = https://github.com/alejandrobernardis/bucket/ar/py_microservice-template/issues/
license = MIT License
author = Full NAME
author_email = full.name@mail.com
maintainer = Full NAME
maintainer_email = full.name@mail.com
description = Microservice
long_description = file: README.md
long_description_content_type = text/markdown
platform =
    POSIX
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    cli = service.cli:main

[tool:pytest]
testpaths = src
filterwarnings =
    error
