# Author: Alejandro M. BERNARDIS
# Email alejandro.bernardis at gmail dot com
# Created: 2021-04-20

[metadata]
name = core
version = attr: core.__version__
url = https://github.com/alejandrobernardis/bucket/ar/python-core-framework/
project_urls =
    Source Code = https://github.com/alejandrobernardis/bucket/ar/python-core-framework/
    Issue Tracker = https://github.com/alejandrobernardis/bucket/issues/
license = MIT License
author = Alejandro M. BERNARDIS
author_email = alejandro.bernardis@gmail.com
maintainer = Alejandro M. BERNARDIS
maintainer_email = alejandro.bernardis@gmail.com
description = Framework
long_description = file: README.md
long_description_content_type = text/markdown
platform =
    POSIX
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.8

[options.packages.find]
where = src

[tool:pytest]
testpaths = src
filterwarnings =
    error
