[tool.poetry]
name = "py_grpc-template"
version = "1.0.0"
description = "Template para proyectos con GRPC en Python (full-stack)"
authors = ["Alejandro M. BERNARDIS <alejandro.bernardis@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
grpcio = "^1.42.0"
grpcio-reflection = "^1.43.0"
protobuf = "^3.19.1"
python-dotenv = "^0.19.2"
googleapis-common-protos = "^1.54.0"
sentry-sdk = "^1.5.8"

[tool.poetry.dev-dependencies]
grpcio-tools = "^1.42.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
