[tool.poetry]
name = "service"
version = "1.0.0"
description = "Template para proyectos con AIOHTTP en Python (full-stack)"
authors = ["Alejandro M. BERNARDIS <alejandro.bernardis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
msgpack = "^1.0.3"
uvloop = "^0.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
